--- a/style/style.css
+++ b/style/style.css
@@ -173,3 +173,38 @@ body {
   line-height: 1.71;
   color: rgba(255, 255, 255, 0.6);
 }
+/* ---------Портфоліо---------------------- */
+.filter-btn {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  color: var(--primary-color);
+  background: #f5f4fa;
+  cursor: pointer;
+  border: none;
+}
+.filter-btn:hover,
+.filter-btn:focus {
+  color: var(--secondary-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+.gallery-title {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primary-color);
+}
+.gallery-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--text-color);
+}
